force-app/main/default/objects/Business_case__c/Business_case__c.object-meta.xml
<CustomObject>
    <label>Business case</label>
    <nameField>
        <displayFormat>BC-{0000}</displayFormat>
        <label>Nom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>