force-app/main/default/objects/Business_case__c/fields/Accastillage__c.field-meta.xml
<CustomField>
    <fullName>Accastillage__c</fullName>
    <label>Accastillage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sous_cran__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Accastillages</valueSetName>
    </valueSet>
</CustomField>