force-app/main/default/objects/Business_case__c/fields/BC_de_finition__c.field-meta.xml
<CustomField>
    <fullName>BC_de_finition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BC de finition</label>
    <referenceTo>Business_case__c</referenceTo>
    <relationshipLabel>Business cases (BC de finition)</relationshipLabel>
    <relationshipName>Business_cases1</relationshipName>
    <type>Lookup</type>
</CustomField>