force-app/main/default/objects/Business_case__c/fields/BC_Etape_suivante__c.field-meta.xml
<CustomField>
    <fullName>BC_Etape_suivante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BC d&apos;étape suivante</label>
    <referenceTo>Business_case__c</referenceTo>
    <relationshipLabel>Business cases</relationshipLabel>
    <relationshipName>Business_cases</relationshipName>
    <type>Lookup</type>
</CustomField>