force-app/main/default/objects/Business_case__c/fields/Couronne__c.field-meta.xml
<CustomField>
    <fullName>Couronne__c</fullName>
    <label>Couronne</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Couronne</valueSetName>
    </valueSet>
</CustomField>