force-app/main/default/objects/Business_case__c/fields/Crochet_Acetal__c.field-meta.xml
<CustomField>
    <fullName>Crochet_Acetal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crochet Acetal</label>
    <type>Checkbox</type>
</CustomField>