force-app/main/default/objects/Business_case__c/fields/Crochet_flexible__c.field-meta.xml
<CustomField>
    <fullName>Crochet_flexible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crochet flexible</label>
    <type>Checkbox</type>
</CustomField>