force-app/main/default/objects/Business_case__c/fields/Crochet_transparent__c.field-meta.xml
<CustomField>
    <fullName>Crochet_transparent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crochet transparent</label>
    <type>Checkbox</type>
</CustomField>