force-app/main/default/objects/Business_case__c/fields/Dent_massive_ou_contreplaqu_e__c.field-meta.xml
<CustomField>
    <fullName>Dent_massive_ou_contreplaqu_e__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dent massive ou contreplaquée</label>
    <type>Checkbox</type>
</CustomField>