force-app/main/default/objects/Business_case__c/fields/Ecran__c.field-meta.xml
<CustomField>
    <fullName>Ecran__c</fullName>
    <label>Ecran</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gouttiere</fullName>
            </value>
            <value>
                <fullName>Inlay core couronne</fullName>
            </value>
            <value>
                <fullName>Inlay onlay facette wax-up</fullName>
            </value>
            <value>
                <fullName>PEI, Cire</fullName>
            </value>
            <value>
                <fullName>Résine</fullName>
            </value>
            <value>
                <fullName>Stellite</fullName>
            </value>
            <value>
                <fullName>Implantologie</fullName>
            </value>
            <value>
                <fullName>Ortho</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Suprastructure</fullName>
            </value>
            <value>
                <fullName>Planification implantaire</fullName>
            </value>
            <value>
                <fullName>Couronne sur implant</fullName>
                <isActive>false</isActive>
                <label>Couronne sur implant</label>
            </value>
            <value>
                <fullName>Inlay onlay</fullName>
                <isActive>false</isActive>
                <label>Inlay onlay</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>