force-app/main/default/objects/Business_case__c/fields/Extraction__c.field-meta.xml
<CustomField>
    <fullName>Extraction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extraction</label>
    <type>Checkbox</type>
</CustomField>