force-app/main/default/objects/Business_case__c/fields/Finition__c.field-meta.xml
<CustomField>
    <fullName>Finition__c</fullName>
    <label>Finition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sous_cran__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Finition</valueSetName>
    </valueSet>
</CustomField>