force-app/main/default/objects/Business_case__c/fields/Finition_suivante__c.field-meta.xml
<CustomField>
    <fullName>Finition_suivante__c</fullName>
    <label>Finition suivante</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Finition__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Finition</valueSetName>
    </valueSet>
</CustomField>