force-app/main/default/objects/Business_case__c/fields/Materiau__c.field-meta.xml
<CustomField>
    <fullName>Materiau__c</fullName>
    <label>Matériau</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sous_cran__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CoCr</fullName>
            </value>
            <value>
                <fullName>NiCr</fullName>
            </value>
            <value>
                <fullName>Alliage précieux</fullName>
            </value>
            <value>
                <fullName>Alliage semi-précieux</fullName>
            </value>
            <value>
                <fullName>Composite</fullName>
            </value>
            <value>
                <fullName>Emax</fullName>
            </value>
            <value>
                <fullName>Full zircone</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Céramo zircone</fullName>
            </value>
            <value>
                <fullName>Wax-up</fullName>
            </value>
            <value>
                <fullName>ENAMIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>