force-app/main/default/objects/Business_case__c/fields/Maximum__c.field-meta.xml
<CustomField>
    <fullName>Maximum__c</fullName>
    <inlineHelpText>Nombre maximum de dents pour appliquer cet élément</inlineHelpText>
    <label>Maximum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>