force-app/main/default/objects/Business_case__c/fields/Minimum__c.field-meta.xml
<CustomField>
    <fullName>Minimum__c</fullName>
    <inlineHelpText>Nombre minimum de dents pour appliquer cet élément</inlineHelpText>
    <label>Minimum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>