force-app/main/default/objects/Business_case__c/fields/Nombre_de_produits__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_produits__c</fullName>
    <label>Nombre de produits</label>
    <summaryForeignKey>Unit_de_facturation__c.Business_case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>