force-app/main/default/objects/Business_case__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <label>Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options</valueSetName>
    </valueSet>
</CustomField>