force-app/main/default/objects/Business_case__c/fields/Poids__c.field-meta.xml
<CustomField>
    <fullName>Poids__c</fullName>
    <formula>IF(ISBLANK(TEXT(Type__c)),0,1)+
IF(ISBLANK(TEXT(Materiau__c)),0,1)+
IF(ISBLANK(TEXT(Options__c)),0,1)+
IF(ISBLANK(TEXT(Finition__c)),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Poids</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>