force-app/main/default/objects/Business_case__c/fields/Produit__c.field-meta.xml
<CustomField>
    <fullName>Produit__c</fullName>
    <label>Produit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Produit</valueSetName>
    </valueSet>
</CustomField>