force-app/main/default/objects/Business_case__c/fields/Remplacement__c.field-meta.xml
<CustomField>
    <fullName>Remplacement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remplacement</label>
    <type>Checkbox</type>
</CustomField>