force-app/main/default/objects/Business_case__c/fields/Restauration__c.field-meta.xml
<CustomField>
    <fullName>Restauration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restauration</label>
    <type>Checkbox</type>
</CustomField>