force-app/main/default/objects/Business_case__c/fields/Sous_cran__c.field-meta.xml
<CustomField>
    <fullName>Sous_cran__c</fullName>
    <label>Sous-écran</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Ecran__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gouttière</fullName>
            </value>
            <value>
                <fullName>PEI, Cire</fullName>
            </value>
            <value>
                <fullName>Résine</fullName>
            </value>
            <value>
                <fullName>Stellite</fullName>
            </value>
            <value>
                <fullName>Inlay onlay facette</fullName>
            </value>
            <value>
                <fullName>Projet esthétique</fullName>
            </value>
            <value>
                <fullName>Inlay core</fullName>
            </value>
            <value>
                <fullName>Couronne</fullName>
            </value>
            <value>
                <fullName>Couronne sur implant</fullName>
            </value>
            <value>
                <fullName>Pilier</fullName>
            </value>
            <value>
                <fullName>Ortho</fullName>
            </value>
            <value>
                <fullName>Réparations</fullName>
            </value>
            <value>
                <fullName>Appareil</fullName>
            </value>
            <value>
                <fullName>Barre</fullName>
            </value>
            <value>
                <fullName>Planification implantaire</fullName>
            </value>
            <value>
                <fullName>Implant</fullName>
                <isActive>false</isActive>
                <label>Implant</label>
            </value>
            <value>
                <fullName>Inlay onlay</fullName>
                <isActive>false</isActive>
                <label>Inlay onlay</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>