force-app/main/default/objects/Business_case__c/fields/Sous_type__c.field-meta.xml
<CustomField>
    <fullName>Sous_type__c</fullName>
    <label>Sous-type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type</valueSetName>
    </valueSet>
</CustomField>