force-app/main/default/objects/Business_case__c/fields/Type_d_implant__c.field-meta.xml
<CustomField>
    <fullName>Type_d_implant__c</fullName>
    <label>Type d&apos;&apos;implant</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sous_cran__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scellée</fullName>
            </value>
            <value>
                <fullName>Transvissée</fullName>
            </value>
            <value>
                <fullName>PROTHESE RESINE TRANSVISSEE SUR IMPLANT AVEC ARMATURE</fullName>
            </value>
            <value>
                <fullName>PROTHESE RESINE TRANSVISSEE SUR IMPLANT SANS ARMATURE</fullName>
            </value>
            <value>
                <fullName>PROTHESE RESINE COMPLETE AMOVIBLE SUPRA-IMPLANTAIRE STABILISEE PAR ATTACHEMENTS AXIAUX</fullName>
            </value>
            <value>
                <fullName>PROTHESE RESINE COMPLETE AMOVIBLE SUPRA-IMPLANTAIRE STABILISEE PAR ATTACHEMENTS CAVALIERS ET BARRE</fullName>
            </value>
            <value>
                <fullName>PROTHESE RESINE COMPLETE AMOVIBLE SUPRA-IMPLANTAIRE STABILISEE PAR ATTACHEMENTS AXIAUX ET BARRE</fullName>
            </value>
            <value>
                <fullName>PROTHESE RESINE COMPLETE AMOVIBLE SUPRA-RADICULAIRE STABILISE PAR DES ATTACHEMENTS AXIAUX</fullName>
            </value>
            <value>
                <fullName>BRIDGE COMPLET CERAMO METALIQUE TRANSVISSE SUR IMPLANT</fullName>
            </value>
            <value>
                <fullName>Essayage esthétique</fullName>
            </value>
            <value>
                <fullName>Avec clavette</fullName>
            </value>
            <value>
                <fullName>Sans clavette</fullName>
            </value>
            <value>
                <fullName>Scellé</fullName>
                <isActive>false</isActive>
                <label>Scellé</label>
            </value>
            <value>
                <fullName>Transvissé</fullName>
                <isActive>false</isActive>
                <label>Transvissé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>