force-app/main/default/objects/Business_case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ecran__c</columns>
    <columns>Sous_cran__c</columns>
    <columns>Type__c</columns>
    <columns>Type_d_implant__c</columns>
    <columns>Materiau__c</columns>
    <columns>Finition__c</columns>
    <columns>Minimum__c</columns>
    <columns>Maximum__c</columns>
    <columns>Nombre_de_produits__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ecran__c</field>
        <operation>equals</operation>
        <value>Inlay core couronne</value>
    </filters>
    <filters>
        <field>Sous_cran__c</field>
        <operation>equals</operation>
        <value>Couronne</value>
    </filters>
    <label>Tout</label>
</ListView>